Issue #367: Tests failed on non-English Windows