@@ -34,8 +34,6 @@ import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.Locale;
-import java.util.stream.Collectors;
 
 import com.puppycrawl.tools.checkstyle.AbstractModuleTestSupport;
 import com.puppycrawl.tools.checkstyle.ConfigurationLoader;
@@ -48,59 +46,60 @@ import com.puppycrawl.tools.checkstyle.internal.utils.BriefUtLogger;
 
 abstract class AbstractPatchFilterEvaluationTest extends AbstractModuleTestSupport {
 
+    private static final String CONTEXT_CONFIG_PATTERN = "(default|zero)ContextConfig.xml";
+
     protected abstract String getPatchFileLocation();
 
     protected void testByConfig(String configPath)
             throws Exception {
-        Locale.setDefault(Locale.ENGLISH);
-        final String inputFile = configPath.replaceFirst(
-                "(default|zero)ContextConfig.xml", "");
+        final String inputFile = configPath.replaceFirst(CONTEXT_CONFIG_PATTERN, "");
         // we can add here any variable to provide path to patch name by PropertiesExpander
         System.setProperty("tp", getPatchFileLocation() + inputFile);
         final Configuration config = ConfigurationLoader.loadConfiguration(
-                getPath(configPath),
-                new PropertiesExpander(System.getProperties()));
-        final ClassLoader moduleClassLoader = SuppressionPatchFilter.class.getClassLoader();
-        final ModuleFactory factory = new PackageObjectFactory(
-                SuppressionPatchFilter.class.getPackage().getName(), moduleClassLoader);
-
-        final RootModule rootModule = (RootModule) factory.createModule(config.getName());
-        rootModule.setModuleClassLoader(moduleClassLoader);
-        rootModule.configure(config);
+                getPath(configPath), new PropertiesExpander(System.getProperties()));
+        final RootModule rootModule = createRootModule(config);
         final ByteArrayOutputStream stream = new ByteArrayOutputStream();
         rootModule.addListener(new BriefUtLogger(stream));
 
-        // run RootModule
         final String path = getPath(inputFile);
-        final File file = new File(path);
-        final int errorCounter;
+        final int errorCounter = processFiles(rootModule, path);
+        assertResults(configPath, path, errorCounter, stream);
+    }
 
-        final List<File> theFiles;
+    private static RootModule createRootModule(Configuration config) throws Exception {
+        final ClassLoader moduleClassLoader = SuppressionPatchFilter.class.getClassLoader();
+        final ModuleFactory factory = new PackageObjectFactory(
+                SuppressionPatchFilter.class.getPackage().getName(), moduleClassLoader);
+        final RootModule rootModule = (RootModule) factory.createModule(config.getName());
+        rootModule.setModuleClassLoader(moduleClassLoader);
+        rootModule.configure(config);
+        return rootModule;
+    }
+
+    private static int processFiles(RootModule rootModule, String path) throws Exception {
+        final File file = new File(path);
         final File[] files = file.listFiles((dir, name) -> {
             return name.endsWith(".java") || name.endsWith(".properties");
         });
-        if (files != null) {
-            theFiles = Arrays.asList(files);
-            Collections.sort(theFiles);
-
-            errorCounter = rootModule.process(theFiles);
-        }
-        else {
+        if (files == null) {
             throw new IOException("there is no java file in this directory.");
         }
 
-        // process each of the lines
-        try (ByteArrayInputStream inputStream =
-                     new ByteArrayInputStream(stream.toByteArray());
+        final List<File> theFiles = Arrays.asList(files);
+        Collections.sort(theFiles);
+        return rootModule.process(theFiles);
+    }
+
+    private void assertResults(String configPath, String path, int errorCounter,
+                               ByteArrayOutputStream stream) throws IOException {
+        try (ByteArrayInputStream inputStream = new ByteArrayInputStream(stream.toByteArray());
              LineNumberReader lnr = new LineNumberReader(
                      new InputStreamReader(inputStream, StandardCharsets.UTF_8))) {
-            final String expectedFile = configPath.replaceFirst(
-                    "(default|zero)ContextConfig.xml", "expected.txt");
+            final String expectedFile = configPath.replaceFirst(CONTEXT_CONFIG_PATTERN,
+                    "expected.txt");
             final Path expectedFilePath = Paths.get(getPath(expectedFile));
             final List<String> expected = Files.readAllLines(expectedFilePath);
-
-            final List<String> actuals = lnr.lines()
-                    .collect(Collectors.toList());
+            final List<String> actuals = lnr.lines().toList();
 
             for (int index = 0; index < expected.size(); index++) {
                 final String expectedResult = path + File.separator + expected.get(index);
